kyverno/demo/pod-with-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-label
  labels:
    app.kubernetes.io/name: my-cool-app
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
