kyverno/demo/pod-with-latest-tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-latest-tag
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
