kyverno/demo/pod-without-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-label
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
      requests:
        memory: "64Mi"
        cpu: "250m"
