kyverno/demo/net-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
spec:
  podSelector:
    matchLabels: {}
  ingress:
  - {}
  egress:
  - {}
