kyverno/demo/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
  - name: check-for-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "The label 'app.kubernetes.io/name' is required."
      pattern:
        metadata:
          labels:
            app.kubernetes.io/name: "?*"
